help. F1 and single window saving position
Add WindowViewModel

--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -81,6 +81,18 @@
       <setting name="LoginRememberedDoctorId" serializeAs="String">
         <value />
       </setting>
+      <setting name="HelpWindowTop" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="HelpWindowLeft" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="HelpWindowHeight" serializeAs="String">
+        <value>500</value>
+      </setting>
+      <setting name="HelpWindowWidth" serializeAs="String">
+        <value>500</value>
+      </setting>
     </Diagnosis.App.Properties.Settings>
   </userSettings>
 </configuration>
