debug. Better debug window

--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -93,6 +93,18 @@
       <setting name="HelpWindowWidth" serializeAs="String">
         <value>500</value>
       </setting>
+      <setting name="DebugWindowLeft" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="DebugWindowWidth" serializeAs="String">
+        <value>450</value>
+      </setting>
+      <setting name="DebugFilter" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="DebugFilterOn" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Diagnosis.App.Properties.Settings>
   </userSettings>
 </configuration>
