--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Screens\Card\Holders\ShortCourseViewModel.cs" />
     <Compile Include="Screens\Card\Holders\PatientViewModel.cs" />
     <Compile Include="Screens\Card\Managers\HrViewer.cs" />
+    <Compile Include="Screens\AdminSettingsViewModel.cs" />
     <Compile Include="Screens\Shell\AvalonDock\ScreenBaseViewModel.cs" />
     <Compile Include="Screens\Shell\AvalonDock\AvalonDockLayoutViewModel.cs" />
     <Compile Include="Screens\Shell\HelpViewModel.cs" />
