--- a/Diagnosis.Common/Diagnosis.Common.csproj
+++ b/Diagnosis.Common/Diagnosis.Common.csproj
@@ -176,6 +176,22 @@
     <Compile Include="Behaviors\RowDblClick.cs" />
     <Compile Include="Behaviors\TwoListSynchronizer.cs" />
     <Compile Include="Combination.cs" />
+    <Compile Include="Converters\AgeToYearsLabel.cs" />
+    <Compile Include="Converters\BaseConverter.cs" />
+    <Compile Include="Converters\BooleanConverter.cs" />
+    <Compile Include="Converters\BoolToAligment.cs" />
+    <Compile Include="Converters\BoolToSexSign.cs" />
+    <Compile Include="Converters\BoolToVis.cs" />
+    <Compile Include="Converters\CountToVisibility.cs" />
+    <Compile Include="Converters\DateOffsetConverters.cs" />
+    <Compile Include="Converters\DateTimeLabels.cs" />
+    <Compile Include="Converters\EnumToLabel.cs" />
+    <Compile Include="Converters\EqualityToBool.cs" />
+    <Compile Include="Converters\IntToString.cs" />
+    <Compile Include="Converters\ListConverters.cs" />
+    <Compile Include="Converters\MonthToString.cs" />
+    <Compile Include="Converters\NullToVis.cs" />
+    <Compile Include="Converters\NumericConverters.cs" />
     <Compile Include="Debug\DebugWindow.xaml.cs">
       <DependentUpon>DebugWindow.xaml</DependentUpon>
     </Compile>
@@ -217,6 +233,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Debug\DebugWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\ConverterResources.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
