--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\Diagnosis.Common\packages.config" />
   <repository path="..\Diagnosis.Data\packages.config" />
   <repository path="..\Diagnosis.Models\packages.config" />
+  <repository path="..\Diagnosis.ServerApp\packages.config" />
   <repository path="..\Diagnosis.Tests\packages.config" />
   <repository path="..\Diagnosis.ViewModels\packages.config" />
 </repositories>
