--- a/Diagnosis.Common/Diagnosis.Common.csproj
+++ b/Diagnosis.Common/Diagnosis.Common.csproj
@@ -176,6 +176,21 @@
     <Compile Include="Behaviors\RowDblClick.cs" />
     <Compile Include="Behaviors\TwoListSynchronizer.cs" />
     <Compile Include="Combination.cs" />
+    <Compile Include="Controls\Common\AlignableWrapPanel.cs" />
+    <Compile Include="Controls\Common\CommaList.xaml.cs">
+      <DependentUpon>CommaList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Common\RadioListBox.xaml.cs">
+      <DependentUpon>RadioListBox.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Common\TextBoxInfo.xaml.cs">
+      <DependentUpon>TextBoxInfo.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Common\UndoOverlay.xaml.cs">
+      <DependentUpon>UndoOverlay.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Common\UniformGridWithOrientation.cs" />
+    <Compile Include="Controls\Common\WrapPanelLastChildFill.cs" />
     <Compile Include="Controls\Helpers\DataGridHelper.cs" />
     <Compile Include="Controls\Helpers\FocusChecker.cs" />
     <Compile Include="Controls\Helpers\ItemCollectionExtensions.cs" />
@@ -240,6 +255,22 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Controls\Common\CommaList.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Common\RadioListBox.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Common\TextBoxInfo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Common\UndoOverlay.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Debug\DebugWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
