--- a/Diagnosis.ViewModels/packages.config
+++ b/Diagnosis.ViewModels/packages.config
@@ -5,5 +5,6 @@
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="LinqSpecs" version="1.0" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="Moq" version="4.2.1409.1722" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
 </packages>
