--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -59,6 +59,12 @@
         <assemblyIdentity name="FluentMigrator" publicKeyToken="aacfc7de5acabf05" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.1.0" newVersion="1.3.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SqlServerCe"
+          publicKeyToken="89845dcd8080cc91"
+          />
+        <bindingRedirect oldVersion="3.5.1.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <userSettings>
