--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Entities\Setting.cs" />
     <Compile Include="Entities\UomType.cs" />
     <Compile Include="Enums\HealthRecordQueryScope.cs" />
+    <Compile Include="Enums\HrView.cs" />
     <Compile Include="Helpers\DomainExtenstions.cs" />
     <Compile Include="Enums\HealthRecordUnit.cs" />
     <Compile Include="Entities\Measure.cs" />
